# Grepper-Utility

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  grepper.py  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish-pypi.yml  python-ci.yml
doc/: DESCRIPTION.md  README.md  USAGE.md
grepper_examples/: example_usage.py
tests/: test_utils.py
